d.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: myapp02-deployment
spec:
 strategy:
   type: RollingUpdate
 replicas: 2
 selector:
   matchLabels:
     app: frontend02
 template:
   metadata:
     name: mypod
     labels:
       app: frontend02
   spec:
     containers:
     - name: mycontainer
       image: nginx
       ports:
       - containerPort: 80
