d1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: frontend
spec:
  strategy: 
    type: RollingUpdate
  replicas: 3
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: custom
        image: anjaliranotreddy/new
        ports:
        - containerPort: 80
