ingressservice.yaml
apiVersion: v1
kind: Service
metadata:
 name: myapp02-service
spec:
 type: ClusterIP
 ports:
   - port: 80
     targetPort: 80
 selector:
   app: frontend02
