ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: myingress
 annotations:
   kubernetes.io/ingress.class: nginx
   ingress.kubernetes.io/rewrite-target: /
spec:
 rules:
   - host: "ec2-54-196-43-191.compute-1.amazonaws.com" # app2.com
     http:
       paths:
         - path: "/"
           pathType: Prefix
           backend:
             service:
               name: myapp02-service
               port:
                 number: 80
